assets: use offline assets except for google fonts; minor CSS fixes
- refactor {,prologin}/.gitignore
- new update-libs.py to download latest version of lib assets
- namespace pages/ statics
- refactor source files for assets outside of publicly available folders

--- a/prologin/pages/templates/pages/about-contest.html
+++ b/prologin/pages/templates/pages/about-contest.html
@@ -27,7 +27,7 @@ Prologin is a nonprofit organization, it is free to enter the contest.
 	<p>{% blocktrans %}For an accurate time-line of this year events, please see the <a href="{{ home_url }}">home page</a>.{% endblocktrans %}</p>
 
 </div> {# hack: end content_super container #}
-	<div class="bgcont" style="background-image: url({% static 'img/qualif.jpg' %}); background-position: 0 50%;">
+	<div class="bgcont" style="background-image: url({% static 'pages/img/qualif.jpg' %}); background-position: 0 50%;">
 		<div class="container presentation-body">
 			<div class="row"><div class="col-sm-8">
 			<h2>{% trans "1<sup>st</sup> step – Qualification" %}</h2>
@@ -46,7 +46,7 @@ It is possible to submit the questionnaire by postal mail or directly on this we
 		</div>
 	</div>
 
-	<div class="bgcont" style="background-image: url({% static 'img/semifinals.jpg' %}); background-position: 0 0;">
+	<div class="bgcont" style="background-image: url({% static 'pages/img/semifinals.jpg' %}); background-position: 0 0;">
 		<div class="container presentation-body">
 			<div class="row"><div class="col-sm-8">
 				<h2>{% trans "2<sup>nd</sup> step – Semifinals" %}</h2>
@@ -71,7 +71,7 @@ using the <a href="{{ url_centers }}">map of exam centers</a>.{% endblocktrans %
 		</div>
 	</div>
 
-	<div class="bgcont" style="background-image: url({% static 'img/final.jpg' %}); background-position: 0 10%;">
+	<div class="bgcont" style="background-image: url({% static 'pages/img/final.jpg' %}); background-position: 0 10%;">
 		<div class="container presentation-body">
 		<div class="row"><div class="col-sm-8">
 			<h2>{% trans "3<sup>rd</sup> step – The Final" %}</h2>
