--- a/prologin/pages/templates/pages/about-qualification.html
+++ b/prologin/pages/templates/pages/about-qualification.html
@@ -14,7 +14,7 @@
 {% block content %}
 
 </div> {# <hack> end content_super container #}
-	<div class="bgcont bgcont-title" style="background-image: url({% static 'img/qualif.jpg' %}); background-position: 0 50%;">
+	<div class="bgcont bgcont-title" style="background-image: url({% static 'pages/img/qualif.jpg' %}); background-position: 0 50%;">
 		<div class="container presentation-body"><h1>{% trans "The qualification stage" %}</h1></div>
 	</div>
 <div class="container"> {# </hack> #}
