--- a/prologin/pages/templates/pages/about-semifinals.html
+++ b/prologin/pages/templates/pages/about-semifinals.html
@@ -14,7 +14,7 @@
 {% block content %}
 
 </div> {# hack: end content_super container #}
-	<div class="bgcont bgcont-title" style=" background-image: url({% static 'img/semifinals.jpg' %}); background-position: 0 0;">
+	<div class="bgcont bgcont-title" style=" background-image: url({% static 'pages/img/semifinals.jpg' %}); background-position: 0 0;">
 		<div class="container presentation-body"><h1>{% trans "The semifinals" %}</h1></div>
 	</div>
 <div class="container"> {# unhack #}
