--- a/prologin/pages/templates/pages/about-organization.html
+++ b/prologin/pages/templates/pages/about-organization.html
@@ -44,13 +44,13 @@
 			<div class="panel panel-default">
 				<div class="panel-heading"><h4 id="legal">{% blocktrans with year=request.current_edition.year %}The {{ year }} team{% endblocktrans %}</h4></div>
 				<div class="panel-body">
-					<div class="organization-team-box">
+					{% if team_pres %}<div class="organization-team-box">
 						<strong>{% trans "President" %}</strong><br>
 						<a href="{% url 'users:profile' team_pres.user.pk %}" class="team-member-avatar"
-						   style="{% if team_pres.user.picture_or_avatar %}background-image: url('{{ team_pres.user.picture_or_avatar.url }}'){% endif %}"/></a>
+						   style="text-indent: -9999px;{% if team_pres.user.picture_or_avatar %}background-image: url('{{ team_pres.user.picture_or_avatar.url }}'){% endif %}">{% trans "President" %}</a>
 						<br>{{ team_pres.user.get_full_name }}<br>
 						<small class="text-muted">{{ team_pres.user.username }}</small>
-					</div>
+					</div>{% endif %}
 					<p><a href="{% url 'team:year' request.current_edition.year %}" class="btn btn-block btn-default">
 						<i class="fa fa-users"></i> {% blocktrans with count=team.count %}See the {{ count }} volunteers{% endblocktrans %}</a></p>
 				</div>
