homepage: minor icon tweaks

--- a/prologin/prologin/static/css/prologin.css
+++ b/prologin/prologin/static/css/prologin.css
@@ -418,7 +418,7 @@ footer .legal {
 	text-align: left;
 }
 
-.fa[data-indicator] {
+.fa[data-indicator], .fa.fa-centered {
 	width: 1em;
 	text-align: center;
 }
