--- a/prologin/homepage/templates/homepage/homepage.html
+++ b/prologin/homepage/templates/homepage/homepage.html
@@ -59,13 +59,13 @@
 
 	<div class="col-sm-3">
 		<ul class="nav">
-			<li><a href="{% url 'zinnia:entry_archive_index' %}"><i class="fa fa-newspaper-o"></i> {% trans "All the news" %}</a></li>
+			<li><a href="{% url 'zinnia:entry_archive_index' %}"><i class="fa fa-newspaper-o fa-centered"></i> {% trans "All the news" %}</a></li>
 		</ul>
 
 		<h2>{% trans "More info" %}</h2>
 		<ul class="nav">
-			<li><a href="{% url 'pages:about-organization' %}">{% trans "The Prologin association" %}</a></li>
-			<li><a href="#TODO">{% trans "How can I join?" %}</a></li>
+			<li><a href="{% url 'pages:about-organization' %}"><i class="fa fa-cube fa-centered"></i> {% trans "The Prologin association" %}</a></li>
+			<li><a href="#TODO"><i class="fa fa-question fa-centered"></i> {% trans "How can I join?" %}</a></li>
 		</ul>
 
 		{% include "homepage/sponsors.html" %}
