migration: events, results, quizzes (with some changes on models)
- Cleaup migrate_from_drupal a bit
- Implement migration for: events, results (notes, assignations) and
  quizzes (QCM questions & user answers)
- Contest models were changed:
	- the 'is_approved' bool on EventWish made no sense, replaced
	  with a assigned_event on Contestant
	- added 'comment' on Sponsor
	- added ContestantCorrection model to keep an history of
	  corrections
- Add Language.guess() that tries "hard" to guess a language from a
  string, eg. 'js' → <Language.Javascript>

--- a/prologin/news/templates/zinnia/_entry_detail_base.html
+++ b/prologin/news/templates/zinnia/_entry_detail_base.html
@@ -80,7 +80,7 @@
 		{% block continue-reading %}
 		{% if continue_reading and object_content.has_more %}
 		<p class="continue-reading">
-			<a href="{{ object.get_absolute_url }}"
+			<i class="fa fa-angle-double-right"></i> <a href="{{ object.get_absolute_url }}"
 				 title="{% blocktrans with object=object.title percent=object_content.remaining_percent|floatformat:0 %}{{ percent }}% of {{ object }} still remains to read.{% endblocktrans %}"
 				 rel="bookmark" itemprop="url">
 				{% trans "Continue reading" %}
