i18n: localize breadcrumbs; add locale selector
- fix some minor CSS issues
- load locale from user profile on login
- remove i18n urls

--- a/prologin/contest/templates/contest/index.html
+++ b/prologin/contest/templates/contest/index.html
@@ -3,9 +3,9 @@
 
 {% block breadcrumbs %}
 	{{ block.super }}
-	{% breadcrumb "Contest" "" %}
+	{% breadcrumb_for "" %}{% trans "Contest" %}{% endbreadcrumb_for %}
 	{% breadcrumb edition.year "" %}
-	{% breadcrumb "Qualification" '' %} {# TODO #}
+	{% breadcrumb_for "" %}{% trans "Qualification" %}{% endbreadcrumb_for %} {# TODO #}
 {% endblock breadcrumbs %}
 
 {% block title %}{% blocktrans with edition.year as year %}Prologin {{ year }}{% endblocktrans %}{% endblock %}
