--- a/prologin/prologin/templates/prologin/main-footer.html
+++ b/prologin/prologin/templates/prologin/main-footer.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 <div class="row">
-	<div class="col-xs-6">
+	<div class="col-xs-6 col-md-4">
 		<h3>{% trans "Prologin" %}</h3>
 		<ul class="nav">
 			<li><a href="{% url 'pages:about-organization' %}">{% trans "The association" %}</a></li>
@@ -11,7 +11,7 @@
 			<li><a href="#TODO">{% trans "Press kit" %}</a></li>
 		</ul>
 	</div>
-	<div class="col-xs-6">
+	<div class="col-xs-6 col-md-4">
 		<h3>{% trans "Terms" %}</h3>
 		<ul class="nav">
 			<li><a href="#TODO">{% trans "Legal notice" %}</a></li>
@@ -38,13 +38,26 @@
 			</span>
 		</a>
 	</div>
+	<div class="col-xs-12 col-md-4">
+		<h3>{% trans "Change locale" %} <i class=" fa fa-globe"></i></h3>
+		{% get_current_language as LANGUAGE_CODE %}
+		<form action="{% url 'set_language' %}" method="post" id="change-lang-form" class="form-inline">
+			{% csrf_token %}
+			{# <input name="next" type="hidden" value="{{ redirect_to }}"/> #}
+			<select name="language" id="set-language" class="form-control" onchange="$('#change-lang-form').submit();">
+				{% get_available_languages as LANGUAGES %}
+				{% get_language_info_list for LANGUAGES as languages %}
+				{% for language in languages %}
+					<option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %}
+							selected="selected"{% endif %}>{{ language.name_local }}</option>
+				{% endfor %}
+			</select>
+			<noscript><input type="submit" class="btn btn-default" value="{% trans "Apply" %}"/></noscript>
+			{% if request.user.is_authenticated and LANGUAGE_CODE != request.user.preferred_locale %}
+				{% url 'users:edit' request.user.pk as user_edit_url %}
+				<p><small class="text-muted">{% blocktrans with url=user_edit_url %}Save your
+preferred locale in your <a href="{{ url }}#id_preferred_locale">user settings</a>.{% endblocktrans %}</small></p>
+			{% endif %}
+		</form>
+	</div>
 </div>
-{% comment %}
-<div class="legal">
-	<p>
-		Copyright &copy; 2000-{% now 'Y' %} {% trans "Prologin est une association de loi 1901 enregistrée au journal officiel du 08/04/2000." %}
-		<br>
-		{% trans "Siège social : 14-16, rue Voltaire 94270, Le Kremlin-Bicêtre" %}
-	</p>
-</div>
-{% endcomment %}
