--- a/prologin/users/templates/registration/password_reset_confirm.html
+++ b/prologin/users/templates/registration/password_reset_confirm.html
@@ -4,8 +4,8 @@
 
 {% block breadcrumbs %}
 	{{ block.super }}
-	{% breadcrumb "Members" "" %}
-	{% breadcrumb "Password reset confirmation" "" %}
+	{% breadcrumb_for "" %}{% trans "Members" %}{% endbreadcrumb_for %}
+	{% breadcrumb_for "" %}{% trans "Password reset confirmation" %}{% endbreadcrumb_for %}
 {% endblock breadcrumbs %}
 
 {% block title %}{% trans "Password reset confirmation" %}{% endblock %}
