--- a/prologin/users/templates/users/password_reset.html
+++ b/prologin/users/templates/users/password_reset.html
@@ -4,7 +4,7 @@
 
 {% block breadcrumbs %}
 	{{ block.super }}
-	{% breadcrumb "Password reset" "users:password_reset" %}
+	{% breadcrumb_for "users:password_reset" %}{% trans "Password reset" %}{% endbreadcrumb_for %}
 {% endblock breadcrumbs %}
 
 {% block content %}
