--- a/prologin/centers/templates/centers/map.html
+++ b/prologin/centers/templates/centers/map.html
@@ -3,7 +3,7 @@
 
 {% block breadcrumbs %}
 	{{ block.super }}
-	{% breadcrumb "The exam centers" "" %}
+	{% breadcrumb_for "" %}{% trans "The exam centers" %}{% endbreadcrumb_for %}
 {% endblock breadcrumbs %}
 
 {% block title %}{% trans "The exam centers" %}{% endblock %}
