--- a/prologin/pages/templates/pages/about-final.html
+++ b/prologin/pages/templates/pages/about-final.html
@@ -4,9 +4,9 @@
 
 {% block breadcrumbs %}
 	{{ block.super }}
-	{% breadcrumb "The organization" 'pages:about-organization' %}
-	{% breadcrumb "About the contest" 'pages:about-contest' %}
-	{% breadcrumb "The final" 'pages:about-final' %}
+	{% breadcrumb_for "pages:about-organization" %}{% trans "The organization" %}{% endbreadcrumb_for %}
+	{% breadcrumb_for "pages:about-contest" %}{% trans "About the contest" %}{% endbreadcrumb_for %}
+	{% breadcrumb_for "pages:about-final" %}{% trans "The final" %}{% endbreadcrumb_for %}
 {% endblock breadcrumbs %}
 
 {% block title %}{% trans "The final" %}{% endblock %}
