--- a/prologin/pages/templates/pages/about-qualification.html
+++ b/prologin/pages/templates/pages/about-qualification.html
@@ -4,9 +4,9 @@
 
 {% block breadcrumbs %}
 	{{ block.super }}
-	{% breadcrumb "The organization" 'pages:about-organization' %}
-	{% breadcrumb "About the contest" 'pages:about-contest' %}
-	{% breadcrumb "The qualification stage" 'pages:about-qualification' %}
+	{% breadcrumb_for "pages:about-organization" %}{% trans "The organization" %}{% endbreadcrumb_for %}
+	{% breadcrumb_for "pages:about-contest" %}{% trans "About the contest" %}{% endbreadcrumb_for %}
+	{% breadcrumb_for "pages:about-qualification" %}{% trans "The qualification stage" %}{% endbreadcrumb_for %}
 {% endblock breadcrumbs %}
 
 {% block title %}{% trans "The qualification stage" %}{% endblock %}
