--- a/prologin/users/templates/users/edit_password.html
+++ b/prologin/users/templates/users/edit_password.html
@@ -4,10 +4,10 @@
 
 {% block breadcrumbs %}
 	{{ block.super }}
-	{% breadcrumb "Members" "#TODO" %}
+	{% breadcrumb_for "#TODO" %}{% trans "Members" %}{% endbreadcrumb_for %}
 	{% breadcrumb edited_user "users:profile" edited_user.id %}
-	{% breadcrumb "Edit" "users:edit" edited_user.id %}
-	{% breadcrumb "Password" "" %}
+	{% breadcrumb_for "users:edit" edited_user.id %}{% trans "Edit" %}{% endbreadcrumb_for %}
+	{% breadcrumb_for "" %}{% trans "Password" %}{% endbreadcrumb_for %}
 {% endblock breadcrumbs %}
 
 {% block title %}{% blocktrans with edited_user.username as username %}Editing {{ username }}'s password{% endblocktrans %}{% endblock %}
