--- a/prologin/users/templates/users/login.html
+++ b/prologin/users/templates/users/login.html
@@ -4,7 +4,7 @@
 
 {% block breadcrumbs %}
 	{{ block.super }}
-	{% breadcrumb "Sign in" "users:login" %}
+	{% breadcrumb_for "users:login" %}{% trans "Sign in" %}{% endbreadcrumb_for %}
 {% endblock breadcrumbs %}
 
 {% block title %}{% trans "Sign in" %}{% endblock %}
