--- a/prologin/prologin/templates/prologin/base.html
+++ b/prologin/prologin/templates/prologin/base.html
@@ -16,6 +16,8 @@
 
 	{# Custom #}
 	<link rel="stylesheet" type="text/css" href="{% static 'css/prologin.css' %}"/>
+	<link rel="stylesheet" type="text/css" href="{% static 'css/forum.css' %}"/>
+
 
 	<meta name="description" content="{% block "meta_descr" %}{% endblock %}">
 
