--- a/prologin/forum/templates/forum/home.html
+++ b/prologin/forum/templates/forum/home.html
@@ -10,10 +10,13 @@
 	{% for cat in cats %}
 		<li>
 		<h3><a href="{{cat.slug}}">{{cat.name}}</a></h3>
-		<p>{{cat.description}}</p>		
+		<p>{{cat.description}}</p>
+		<div class="nb_stuff">
+			<p>{% blocktrans with post=cat.nb_post thread=cat.nb_thread on=cat.last_edited_on|date:"d F Y G:i" by=cat.last_edited_by %}Threads : {{thread}}, Posts : {{post}}, Last post by : {{by}}, the {{on}}{% endblocktrans %}</p>
+		</div>
 		</li>
 		{% empty %}
-			<p class="empty">Empty</p>		
+			<p class="empty">Empty</p>
 	{% endfor %}
 </ul>
 {% endblock %}
