Contest: qualif submission page & form, various fixes (WIP)

--- a/prologin/homepage/templates/homepage/jumbotron.html
+++ b/prologin/homepage/templates/homepage/jumbotron.html
@@ -26,7 +26,7 @@
 							<div class="col-xs-7 col-sm-12">
 								<div class="desc">
 									<p>
-										{% if current_qcm %}
+										{% if request.current_qcm %}
 											{% blocktrans %}A quiz and {{ problems_count }} problems to solve online.{% endblocktrans %}
 										{% else %}
 											{% blocktrans %}{{ problems_count }} problems to solve online.{% endblocktrans %}
