Correction of "association" into "organization"
Some pages still used the wrong word "association" instead of "organization".

--- a/prologin/prologin/templates/prologin/main-footer.html
+++ b/prologin/prologin/templates/prologin/main-footer.html
@@ -3,7 +3,7 @@
 	<div class="col-xs-6 col-md-4">
 		<h3>{% trans "Prologin" %}</h3>
 		<ul class="nav">
-			<li><a href="{% url 'pages:about-organization' %}">{% trans "The association" %}</a></li>
+			<li><a href="{% url 'pages:about-organization' %}">{% trans "The organization" %}</a></li>
 			<li><a href="{% url 'pages:about-organization' %}#contact">{% trans "Contact us" %}</a></li>
 		</ul>
 		<h3>{% trans "More" %}</h3>
