--- a/prologin/pages/templates/pages/about-organization.html
+++ b/prologin/pages/templates/pages/about-organization.html
@@ -60,7 +60,7 @@
 			<div class="panel panel-default">
 				<div class="panel-heading"><h4 id="legal">{% trans "Legal status" %}</h4></div>
 				<div class="panel-body">
-					<p>{% blocktrans %}Prologin is a French “law 1901” association registered under the sub-prefecture of
+					<p>{% blocktrans %}Prologin is a French “law 1901” organization registered under the sub-prefecture of
 <em>L'Hay-les-Roses</em> on 2000-08-04.{% endblocktrans %}</p>
 					<p>{% trans "CNIL registration number:" %} <code>830039</code>.</p>
 					<p><small>{% blocktrans %}In accordance with Article 34 of the “Informatique et Liberté” law, you have
@@ -72,7 +72,7 @@ the “Contact info” box.{% endblocktrans %}</small></p>
 		</div>
 	</div>
 
-	<h2 id="organization">{% trans "A computer enthusiasts association" %}</h2>
+	<h2 id="organization">{% trans "A computer enthusiasts organization" %}</h2>
 	{% blocktrans %}<p class="text-justify">The purpose of Prologin is to enable young computer enthusiasts to meet and compete with each other. Indeed,
 computer science is still largely under represented in French schools. Therefore, those who practice it are
 often self-taught and have an individual practice of it. However, any large project requires teamwork. This is
